aptcron (0.0.9) unstable; urgency=low

  * Fix IndexError on new packages/packages that are to be deleted.
  * Account for newly installed, removed and downgraded packages.

 -- Mathias Ertl <mati@er.tl>  Mon, 09 Jun 2014 19:43:12 +0200

aptcron (0.0.8) unstable; urgency=low

  * Fix fixed-time crontab
  * Enable dist-upgrade by default.
  * Add no-dist-upgrade parameter.

 -- Mathias Ertl <mati@er.tl>  Mon, 09 Jun 2014 19:43:12 +0200

aptcron (0.0.7) unstable; urgency=low
  
  * Fix the random-time parameter (was broken due to migration to cli-only
    parameter).

 -- Mathias Ertl <mati@er.tl>  Sun, 13 Apr 2014 20:19:37 +0200

aptcron (0.0.6) unstable; urgency=low
  
  * The --random-time parameter is now a cli-only parameter.

 -- Mathias Ertl <mati@er.tl>  Sun, 13 Apr 2014 19:40:32 +0200

aptcron (0.0.5) unstable; urgency=low
  
  * Add the --random-time option to avoid shakey cron-jobs.
  * Fix E-Mails in case of early errors.
  * aptcron-in-the-morning now conflicts with aptcron-random-time and
    vice-verca.

 -- Mathias Ertl <mati@er.tl>  Sat, 12 Apr 2014 15:06:34 +0200

aptcron (0.0.4) unstable; urgency=low
  
  * Packages with random-time cron-jobs now depend on at.
  * Random-time cron-jobs pipe output to stderr, making them silent.
  * Add the aptcron-only-new package.
  * Package docs in /usr/share/doc now always link to aptcron, as it is the
    main package.

 -- Mathias Ertl <mati@er.tl>  Thu, 10 Apr 2014 13:14:32 +0200

aptcron (0.0.3) unstable; urgency=low
  
  * Fix random minutes in cron-jobs.

 -- Mathias Ertl <mati@er.tl>  Wed, 09 Apr 2014 10:44:28 +0200

aptcron (0.0.2) unstable; urgency=low
  
  * Use socket.getfqdn() instead of gethostname().

 -- Mathias Ertl <mati@er.tl>  Mon, 07 Apr 2014 23:43:17 +0200

aptcron (0.0.1) unstable; urgency=low
  
  * Initial version

 -- Mathias Ertl <mati@er.tl>  Fri, 04 Apr 2014 14:50:43 +0200